--- a/Mater.yaml
+++ b/Mater.yaml
@@ -254,7 +254,7 @@
           - name: Chaning the name of the Host machine to Master
             shell:
               cmd: 
-              - hostnamectl set-hostname master
+              - hostnamectl set-hostname master.node
               - exec bash
             register: hostname_status
 
